--- a/Apollo/Base.lproj/Main.storyboard
+++ b/Apollo/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--Spotify Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Apollo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SpotifyLoginViewController" customModule="Apollo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -36,46 +36,38 @@
                                     <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dfR-Ek-Cgz"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBS-Rp-9b5">
-                                <rect key="frame" x="129.5" y="134" width="116" height="30"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nbe-V6-qfA">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="VHd-CL-Awh"/>
+                                    <constraint firstAttribute="width" constant="375" id="nmH-6J-QcK"/>
                                 </constraints>
-                                <string key="text">playing "Snow" 
-, </string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wrote action to Firebase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWQ-e5-OQd">
-                                <rect key="frame" x="95.5" y="172" width="184" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="jvt-1y-1re"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem title="Apollo" id="2tb-k9-ell">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Dwb-4D-mdX">
+                                            <connections>
+                                                <segue destination="wGE-32-Tmn" kind="show" id="5Nk-NV-sMK"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cWQ-e5-OQd" firstAttribute="top" secondItem="OBS-Rp-9b5" secondAttribute="bottom" constant="8" id="1XB-UI-h1s"/>
+                            <constraint firstItem="nbe-V6-qfA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Mk9-fy-92Z"/>
                             <constraint firstItem="WEf-dO-Ywl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Srb-cx-oTH"/>
                             <constraint firstItem="WEf-dO-Ywl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gUu-kl-mWT"/>
-                            <constraint firstItem="OBS-Rp-9b5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h6t-jI-Bc1"/>
-                            <constraint firstItem="cWQ-e5-OQd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jZU-N7-D5H"/>
-                            <constraint firstItem="OBS-Rp-9b5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="114" id="ukw-4n-dwH"/>
+                            <constraint firstItem="nbe-V6-qfA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wLD-sf-CLY"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="firebaseLabel" destination="cWQ-e5-OQd" id="uKa-AS-txA"/>
                         <outlet property="loginButton" destination="WEf-dO-Ywl" id="i7R-gq-iX9"/>
-                        <outlet property="playingSongLabel" destination="OBS-Rp-9b5" id="UYh-wG-2Wc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="599" y="124"/>
+            <point key="canvasLocation" x="1324" y="841"/>
         </scene>
         <!--User Type View Controller-->
         <scene sceneID="VAY-Et-uea">
@@ -218,7 +210,7 @@
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter room name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFD-lU-J67">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter room name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFD-lU-J67">
                                 <rect key="frame" x="111" y="137.5" width="153" height="24"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <nil key="textColor"/>
@@ -253,6 +245,7 @@
                         <outlet property="roomCodeTextField" destination="Sj8-Kd-BpS" id="gX2-Rw-lAg"/>
                         <outlet property="roomNameTextField" destination="1vu-MG-ihW" id="tct-uC-ue4"/>
                         <segue destination="TMX-MT-nDs" kind="show" identifier="roomOwnerSegue" id="hct-sK-NBG"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="spotifyLoginSegue" id="1cL-T8-UHa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1aW-fz-9Cp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -270,12 +263,51 @@
                     <view key="view" contentMode="scaleToFill" id="0Wc-1w-6ji">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1iq-qJ-Hom">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="Njk-FB-Q7e"/>
+                                </constraints>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem title="Apollo" id="fy8-Vh-96L">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="M1G-Ov-TMU"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ror-G1-sDO">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </scrollView>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lqh-kq-uB9">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="qY3-zH-EW4"/>
+                                </constraints>
+                                <items>
+                                    <tabBarItem title="Playlist" id="wMC-lp-nu8" userLabel="Playlist"/>
+                                    <tabBarItem systemItem="search" id="BLK-YQ-d0X" userLabel="Search"/>
+                                    <tabBarItem systemItem="more" id="aDm-AG-A7m"/>
+                                </items>
+                            </tabBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Ror-G1-sDO" secondAttribute="trailing" id="GGF-UP-9va"/>
+                            <constraint firstItem="Lqh-kq-uB9" firstAttribute="top" secondItem="Ror-G1-sDO" secondAttribute="bottom" id="MSp-dr-hVT"/>
+                            <constraint firstItem="1iq-qJ-Hom" firstAttribute="centerX" secondItem="0Wc-1w-6ji" secondAttribute="centerX" id="STQ-Nv-eOC"/>
+                            <constraint firstItem="Lqh-kq-uB9" firstAttribute="centerX" secondItem="0Wc-1w-6ji" secondAttribute="centerX" id="lhn-8t-eOv"/>
+                            <constraint firstItem="Ror-G1-sDO" firstAttribute="leading" secondItem="0Wc-1w-6ji" secondAttribute="leading" id="n0D-mb-Rfg"/>
+                            <constraint firstItem="Ntx-uT-COS" firstAttribute="top" secondItem="Lqh-kq-uB9" secondAttribute="bottom" id="rdl-Dr-h8q"/>
+                            <constraint firstItem="1iq-qJ-Hom" firstAttribute="top" secondItem="afe-RQ-bV2" secondAttribute="bottom" id="sgx-6o-QJN"/>
+                            <constraint firstItem="Ror-G1-sDO" firstAttribute="top" secondItem="1iq-qJ-Hom" secondAttribute="bottom" id="stB-6S-U5A"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N7y-qV-j8o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1310" y="841"/>
+            <point key="canvasLocation" x="2064.8000000000002" y="1156.3718140929536"/>
         </scene>
         <!--Join Room View Controller-->
         <scene sceneID="wVu-f4-JuQ">
@@ -377,7 +409,8 @@
         <image name="apollo_icon_black.png" width="1568" height="1864"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fk0-VQ-eok"/>
-        <segue reference="Kl6-gv-qZ5"/>
+        <segue reference="hct-sK-NBG"/>
+        <segue reference="5Nk-NV-sMK"/>
+        <segue reference="OXb-LG-odC"/>
     </inferredMetricsTieBreakers>
 </document>
